# MCP-Task-Messager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/task_messager/: __init__.py  core.py  formatter.py  logger.py  models.py  server.py
task_messager/: sample_ds_logistics_task.json  server.py
