[project]
name = "task-messager"
version = "0.1.2"
description = "MCP server to send templated messages to Google Chat via Incoming Webhook"
authors = [{ name = "Muhammet Ali AYGUN" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp>=0.3.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
task-messager = "task_messager.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
